Add Java 8 support to maven plugins